--- a/app/src/main/res/layout/activity_define_viewgroup.xml
+++ b/app/src/main/res/layout/activity_define_viewgroup.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.idealcn.define.view.view.DefineViewGroup
-    android:background="@color/colorPrimaryDark"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<com.idealcn.define.view.view.DefineViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:define="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorAccent">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
-    <TextView
-        android:layout_marginLeft="50dp"
+        android:text="河南省平舆县" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="中华人民共和国" />
+
+    <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:text="北京市" />
 
+    <TextView
+        style="@style/FlowChildView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="北京市"/>
-    <TextView
         android:layout_marginLeft="15dp"
-
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="乌鲁木齐"/>
+        android:text="乌鲁木齐" />
 
     <TextView
+        style="@style/FlowChildView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -37,39 +42,40 @@
         android:text="山东农商银行威海高新区分行" />
 
     <TextView
+        style="@style/FlowChildView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:lines="1"
         android:text="环球黑卡高端VIP钻石卡" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
+        android:text="阿里巴巴(中国)技术有限公司" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:text="河南省平舆县" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
-    <TextView
         android:layout_marginLeft="50dp"
+        android:text="中华人民共和国" />
 
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
-    <TextView
         android:layout_marginLeft="15dp"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="北京市"/>
+        android:text="北京市" />
 
     <TextView
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:lines="1"
@@ -81,151 +87,174 @@
         android:layout_marginLeft="15dp"
         android:lines="1"
         android:text="山东农商银行威海高新区分行" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="环球黑卡" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="环球黑卡"/>
-    <TextView
         android:layout_marginLeft="10dp"
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
+        android:text="阿里巴巴(中国)技术有限公司" />
 
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
+        android:text="河南省平舆县" />
+
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
+        android:text="中华人民共和国" />
 
+    <com.idealcn.define.view.view.FlowChildView
+        define:text="中二青年"
+        define:textSize = "14sp"
+        define:textColor = "@color/colorPrimary"
+        define:boundary_line_color="@color/colorPrimaryDark"
+        define:boundary_line_width="3dp"
         android:layout_width="wrap_content"
+        style="@style/FlowChildView"
         android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
-    <TextView
         android:layout_marginLeft="15dp"
+         />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="北京市"/>
     <TextView
-        android:layout_marginLeft="15dp"
+        android:layout_width="wrap_content"
 
-        android:lines="1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="乌鲁木齐"/>
-    <TextView
-        android:layout_marginLeft="15dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="山东农商银行"/>
-    <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="乌鲁木齐" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="环球黑卡"/>
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="山东农商银行" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="环球黑卡" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
-
-
+        android:text="阿里巴巴(中国)技术有限公司" />
 
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
+        android:text="河南省平舆县" />
+
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
+        android:text="中华人民共和国" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:text="北京市" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="北京市"/>
     <TextView
-        android:layout_marginLeft="15dp"
+        android:layout_width="wrap_content"
 
-        android:lines="1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="乌鲁木齐"/>
-    <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="乌鲁木齐" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="山东农商银行"/>
-    <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="山东农商银行" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="环球黑卡"/>
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="环球黑卡" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
+        android:text="阿里巴巴(中国)技术有限公司" />
 
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
+        android:text="河南省平舆县" />
+
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
+        android:text="中华人民共和国" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:text="北京市" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="北京市"/>
     <TextView
-        android:layout_marginLeft="15dp"
+        android:layout_width="wrap_content"
 
-        android:lines="1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="乌鲁木齐"/>
-    <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="乌鲁木齐" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="山东农商银行"/>
-    <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
+        android:text="山东农商银行" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="环球黑卡"/>
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="环球黑卡" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
+        android:text="阿里巴巴(中国)技术有限公司" />
 
 </com.idealcn.define.view.view.DefineViewGroup>
